--- a/configs/GPS/nano-GPS+RWSE-rdkit.yaml
+++ b/configs/GPS/nano-GPS+RWSE-rdkit.yaml
@@ -5,27 +5,23 @@ wandb:
   project: nano
 dataset:
   format: PyG-DrugExcpPair
-  name: 10-fold-CV_seed7_split8
+  name: large_0
   task: graph
   task_type: classification
   transductive: False
   node_encoder: True
-  node_encoder_name: Atom+LapPE
+  node_encoder_name: Atom+RWSE
   node_encoder_bn: False
   edge_encoder: True
   edge_encoder_name: Bond
   edge_encoder_bn: False
-posenc_LapPE:
+posenc_RWSE:
   enable: True
-  eigen:
-    laplacian_norm: none
-    eigvec_norm: L2
-    max_freqs: 8
-  model: DeepSet
-  dim_pe: 8
-  layers: 2
-  n_heads: 4  # Only used when `posenc.model: Transformer`
-  raw_norm_type: none
+  kernel:
+    times_func: range(1,17)
+  model: Linear
+  dim_pe: 16
+  raw_norm_type: BatchNorm
 train:
   mode: custom
   batch_size: 32
@@ -40,7 +36,7 @@ gt:
   layer_type: CustomGatedGCN+Transformer
   layers: 10
   n_heads: 4
-  dim_hidden: 64  # `gt.dim_hidden` must match `gnn.dim_inner`
+  dim_hidden: 400  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.05
   attn_dropout: 0.5
   layer_norm: False
@@ -48,14 +44,14 @@ gt:
 gnn:
   head: san_graph
   layers_pre_mp: 0
-  layers_post_mp: 5  # Not used when `gnn.head: san_graph`
-  dim_inner: 64  # `gt.dim_hidden` must match `gnn.dim_inner`
+  layers_post_mp: 3  # Not used when `gnn.head: san_graph`
+  dim_inner: 400  # `gt.dim_hidden` must match `gnn.dim_inner`
   batchnorm: True
   act: relu
   dropout: 0.0
   agg: mean
   normalize_adj: False
-  rdkit: False
+  rdkit: True
 optim:
   clip_grad_norm: True
   optimizer: adamW
