--- a/configs/GPS/nano-GPS-rdkit.yaml
+++ b/configs/GPS/nano-GPS-rdkit.yaml
@@ -40,7 +40,7 @@ gt:
   layer_type: CustomGatedGCN+Transformer
   layers: 10
   n_heads: 4
-  dim_hidden: 64  # `gt.dim_hidden` must match `gnn.dim_inner`
+  dim_hidden: 400  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.05
   attn_dropout: 0.5
   layer_norm: False
@@ -49,13 +49,13 @@ gnn:
   head: san_graph
   layers_pre_mp: 0
   layers_post_mp: 5  # Not used when `gnn.head: san_graph`
-  dim_inner: 64  # `gt.dim_hidden` must match `gnn.dim_inner`
+  dim_inner: 400  # `gt.dim_hidden` must match `gnn.dim_inner`
   batchnorm: True
   act: relu
   dropout: 0.0
   agg: mean
   normalize_adj: False
-  rdkit: False
+  rdkit: True
 optim:
   clip_grad_norm: True
   optimizer: adamW
