--- a/configs/GPS/nano-GPS+RWSE.yaml
+++ b/configs/GPS/nano-GPS+RWSE.yaml
@@ -26,7 +26,8 @@ train:
   mode: custom
   batch_size: 32
   eval_period: 1
-  ckpt_period: 1
+  ckpt_period: 100
+  ckpt_clean: False
 model:
   type: GPSModel
   loss_fun: cross_entropy
